upload media to the events page

--- a/public/html/events.html
+++ b/public/html/events.html
@@ -162,137 +162,348 @@
         </div>
       </div>
     </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">Experience AR</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">To The Beach</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">Super Night</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">Experience Yoga</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>                 
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
+<div class="card">
+  <div class="content">
+    <h2 class="title">Adventure Awaits</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>29 / 3 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">New York, USA</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Discover Nature</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>49 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Kyoto, Japan</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Relaxing Retreat</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>59 / 5 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Paris, France</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Cultural Journey</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>39 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Sydney, Australia</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Sunset Sailing</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>29 / 3 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">New York, USA</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Wildlife Safari</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>49 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Kyoto, Japan</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Spa and Wellness</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>59 / 5 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Paris, France</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Historic Landmarks Tour</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>39 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Sydney, Australia</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
           </div>
 
-          <div class="page-content">
-          <div class="card">
-              <div class="content">
-                <h2 class="title">Experience AR</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">To The Beach</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">Super Night</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="content">
-                <h2 class="title">Experience Yoga</h2>
-                <button class="btn btn-outline-danger btn-circle favorite-button">
-                    <i class="bi bi-heart"></i>
-                </button>
-                <div>
-                  <h2 class="mb-2">
-                    <sup>$</sup>39 / 4 <sup>hrs</sup>
-                  </h2>
-                  <p class="mb-6">per person</p>                 
-                  <p class="mb-6">Marrakech, Morocco</p>
-                  <button class="btn">Book now</button>
-                </div>
-              </div>
-            </div>
+ <div class="page-content">
+                <div class="card">
+      <div class="content">
+        <h2 class="title">AR Adventure Tour</h2>
+        <button class="btn btn-outline-danger btn-circle favorite-button">
+          <i class="bi bi-heart"></i>
+        </button>
+        <div>
+          <h2 class="mb-2">
+            <sup>$</sup>45 / 3 <sup>hrs</sup>
+          </h2>
+          <p class="mb-6">per person</p>
+          <p class="mb-6">Marrakech, Morocco</p>
+          <button class="btn">Book now</button>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../static/imgs/cover2.jpg" alt="Beachside Relaxation" class="card-img-top" />
+      <div class="content">
+        <h2 class="title">Beachside Relaxation</h2>
+        <button class="btn btn-outline-danger btn-circle favorite-button">
+          <i class="bi bi-heart"></i>
+        </button>
+        <div>
+          <h2 class="mb-2">
+            <sup>$</sup>50 / 5 <sup>hrs</sup>
+          </h2>
+          <p class="mb-6">per person</p>
+          <p class="mb-6">Marrakech, Morocco</p>
+          <button class="btn">Book now</button>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../static/imgs/cover3.jpg" alt="Nightlife Extravaganza" class="card-img-top" />
+      <div class="content">
+        <h2 class="title">Nightlife Extravaganza</h2>
+        <button class="btn btn-outline-danger btn-circle favorite-button">
+          <i class="bi bi-heart"></i>
+        </button>
+        <div>
+          <h2 class="mb-2">
+            <sup>$</sup>60 / 6 <sup>hrs</sup>
+          </h2>
+          <p class="mb-6">per person</p>
+          <p class="mb-6">Marrakech, Morocco</p>
+          <button class="btn">Book now</button>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../static/imgs/cover4.jpg" alt="Yoga and Meditation Retreat" class="card-img-top" />
+      <div class="content">
+        <h2 class="title">Yoga and Meditation Retreat</h2>
+        <button class="btn btn-outline-danger btn-circle favorite-button">
+          <i class="bi bi-heart"></i>
+        </button>
+        <div>
+          <h2 class="mb-2">
+            <sup>$</sup>35 / 2 <sup>hrs</sup>
+          </h2>
+          <p class="mb-6">per person</p>
+          <p class="mb-6">Marrakech, Morocco</p>
+          <button class="btn">Book now</button>
+        </div>
+      </div>
+    </div>
+<div class="card">
+  <div class="content">
+    <h2 class="title">Adventure Awaits</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>29 / 3 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">New York, USA</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Discover Nature</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>49 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Kyoto, Japan</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Relaxing Retreat</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>59 / 5 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Paris, France</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Cultural Journey</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>39 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Sydney, Australia</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Sunset Sailing</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>29 / 3 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">New York, USA</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Wildlife Safari</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>49 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Kyoto, Japan</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Spa and Wellness</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>59 / 5 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Paris, France</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="content">
+    <h2 class="title">Historic Landmarks Tour</h2>
+    <button class="btn btn-outline-danger btn-circle favorite-button">
+      <i class="bi bi-heart"></i>
+    </button>
+    <div>
+      <h2 class="mb-2">
+        <sup>$</sup>39 / 4 <sup>hrs</sup>
+      </h2>
+      <p class="mb-6">per person</p>
+      <p class="mb-6">Sydney, Australia</p>
+      <button class="btn">Book now</button>
+    </div>
+  </div>
+</div>
+
           </div>
 
           <div class="page-content">
